# running-podcast-intelligence

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/episodes/: page.tsx
frontend/src/app/podcasts/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: AnswerCard.tsx  EpisodeCard.tsx  Nav.tsx  PodcastCard.tsx  SearchBar.tsx  SourceCard.tsx
frontend/src/lib/: api.ts  mock.ts  types.ts
scripts/: check_feeds.py  crawl.py  embed.py  search_test.py  seed_podcasts.py  transcribe.py
src/: config.py
src/api/: main.py  models.py  search.py
src/embeddings/: chunker.py  pipeline.py
src/ingestion/: crawler.py
src/registry/: podcasts.py
src/transcription/: modal_worker.py  whisper.py
supabase/migrations/: 001_initial_schema.sql  002_add_transcript.sql
